# idf-eclipse-plugin

./: .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .project  AGENTS.md  CONTRIBUTING.md  FAQ.md  HeapTracing.md  LICENSE.md  MissingPropertyFinder.ps1  PULL_REQUEST_TEMPLATE.md  README.md  README_CN.md  WORKAROUNDS.md  WORKAROUNDS_CN.md  WORKAROUNDS__CN.md  pom.xml
.devcontainer/: devcontainer.json
.github/: permission.txt  pr-title-checker-config.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump-version.yml  ci.yml  ci_beta.yml  ci_release.yml  ci_uploads.yml  ci_windows.yml  codequality.yml  conventional-commits.yml  docs_build.yml  docs_deploy.yml  (+22 more)
NewAndNoteworthy/: README.md
bundles/: .project  pom.xml
common/: MissingPropertyFinder.ps1  MissingTranslationFileGen.ps1
docs/: .gitignore  Espressif-IDE-Windows-Installer.md  Espressif-IDE.md  EspressifIDE.md  HeapTracing.md  JTAG Flashing.md  MissingToolsManualPathUpdateGuide.md  OpenOCD Debugging.md  README.md  clangd_cdt_support.md  conf_common.py
docs_readme/: Espressif-IDE-Windows-Installer.md  Espressif-IDE.md  JTAG Flashing.md  MissingToolsManualPathUpdateGuide.md  OpenOCD Debugging.md  clangd_cdt_support.md
features/: .project  pom.xml
releng/: .project  index.html  pom.xml
resources/: espressif_eclipse_formatter.xml  index.html
test/: .classpath  .gitignore  .project  README.md  build.properties  pom.xml
tests/: .classpath  .project  pom.xml
tests/com.espressif.idf.ui.test/resources/default-files/NewProjectTest/main/: .project  CMakeLists.txt
(+1264 files in other folders)
